--- a/rpm/harbour-metronome.yaml
+++ b/rpm/harbour-metronome.yaml
@@ -1,6 +1,6 @@
 Name: harbour-metronome
 Summary: Metronome
-Version: 1.9.0
+Version: 1.9.5
 Release: 1
 Group: Qt/Qt
 URL: http://example.org/
@@ -13,6 +13,7 @@ Configure: none
 Builder: qtc5
 PkgConfigBR:
 - sailfishapp >= 0.0.10
+- keepalive
 - Qt5Core
 - Qt5Qml
 - Qt5Quick
